--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   percent_indicator: ^4.2.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
